# time_series_analysis_3

./: .gitignore  Makefile  README.md  SARIMA.py  main.py  profile.html  profile.json  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
data/: data.csv
scripts/: __init__.py  get_forecast.py  get_min_max_data.py  learning_model.py  learning_prophet_model.py  learning_sarimax_model.py  pipline.py  read_data.py  rename_columns.py  save_result_df.py  split_df.py  timing.py  validate_content.py  validate_date.py  validate_datetime.py  validate_structure.py  visualize_data.py
scripts/data_loader/: get_min_max_data.py  is_valid_country_name.py  is_valid_seasonality_prior_scale.py  read_data.py  rename_columns.py  split_df.py  validate_content.py  validate_structure.py
scripts/models/: base_model.py  pmdarima.py  prophet.py
scripts/visualize/: visualize_data.py
stat_project/: __init__.py  pipeline.py
stat_project/data_loader/: __init__.py  get_min_max_data.py  is_valid_country_name.py  is_valid_seasonality_prior_scale.py  read_data.py  split_df.py
stat_project/models/: base_model.py  pmdarima.py  prophet.py
stat_project/utils/: timing.py
stat_project/visualize/: __init__.py
tests/: conftest.py  test_learning_model.py  test_rename_columns.py  test_split_df.py  test_validate_data.py
